[gd_scene load_steps=3 format=3 uid="uid://combat_ui_scene"]

[ext_resource type="Script" path="res://scripts/ui/combat_ui.gd" id="1_combat_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_combat_panel"]
bg_color = Color(0.15, 0.1, 0.1, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.7, 0.3, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CombatUI" type="CanvasLayer"]
layer = 15
process_mode = 3
script = ExtResource("1_combat_ui")

[node name="CombatPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_combat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CombatPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CombatPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "COMBAT"
horizontal_alignment = 1

[node name="StatsContainer" type="HBoxContainer" parent="CombatPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="PlayerStats" type="RichTextLabel" parent="CombatPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Player[/b]"

[node name="VSLabel" type="Label" parent="CombatPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "VS"
vertical_alignment = 1

[node name="EnemyStats" type="RichTextLabel" parent="CombatPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Enemy[/b]"

[node name="ProbabilityLabel" type="Label" parent="CombatPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "Win Probability: 50%"
horizontal_alignment = 1

[node name="DiceLabel" type="Label" parent="CombatPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1

[node name="ResultPanel" type="Panel" parent="CombatPanel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ResultLabel" type="Label" parent="CombatPanel/VBoxContainer/ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 28
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CombatPanel/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 40

[node name="FightButton" type="Button" parent="CombatPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "FIGHT"

[node name="FleeButton" type="Button" parent="CombatPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "FLEE"
